# risk-oracle

./: .gitignore  Out-of-Sample Simulations.py  README.md  pyproject.toml
data/: SPX.csv  crypto.csv  fear_greed_index.csv  link.json  price_mcap_BTC.csv  price_mcap_ETH.csv  usdc.json
results/: xgboost_var_result.ipynb
riskenv/: constants.py  evaluation.py  features.py  settings.py
scripts/: Out-of-Sample Simulations.py  fetch_cryptocompare.py  fetch_fear_greed.py  gjr_garch.py  xgboost_var.py
